tests/golden/library/gatekeeper/gatekeeper/10_helmchart/gatekeeper/templates/gatekeeper-admin-serviceaccount.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  labels:
    app: gatekeeper
    chart: gatekeeper
    gatekeeper.sh/system: 'yes'
    heritage: Helm
    release: gatekeeper
  name: gatekeeper-admin
  namespace: syn-gatekeeper
