tests/golden/library/gatekeeper/gatekeeper/10_helmchart/gatekeeper/templates/gatekeeper-webhook-server-cert-secret.yaml
apiVersion: v1
kind: Secret
metadata:
  annotations: {}
  labels:
    app: gatekeeper
    chart: gatekeeper
    gatekeeper.sh/system: 'yes'
    heritage: Helm
    release: gatekeeper
  name: gatekeeper-webhook-server-cert
  namespace: syn-gatekeeper
