tests/golden/library/gatekeeper/gatekeeper/10_helmchart/gatekeeper/templates/gatekeeper-webhook-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gatekeeper
    chart: gatekeeper
    gatekeeper.sh/system: 'yes'
    heritage: Helm
    release: gatekeeper
  name: gatekeeper-webhook-service
  namespace: syn-gatekeeper
spec:
  ports:
    - name: https-webhook-server
      port: 443
      targetPort: webhook-server
  selector:
    app: gatekeeper
    chart: gatekeeper
    control-plane: controller-manager
    gatekeeper.sh/operation: webhook
    gatekeeper.sh/system: 'yes'
    heritage: Helm
    release: gatekeeper
